Do not call selectedRow() at the end of tableSelectionChanged().

That line will cause infinite growing stack when Ctrl+A is pressed and
finally make konsole crash .

BUG: 281375
FIXED-IN: 4.8
(cherry picked from commit e83bc55fa4f19218955c7f28161dfefd40ab692a)